# CPPContainer

./: .gitignore  CMakeLists.txt  main.cpp
DS/: BITRangeUpdate.h  BinaryIndexedTreeFenwick.h  D2BinaryIndexTree.h  ExpressionTree.h  ForwardDNSLookupCache.h  GenericLLC.h  IntervalMap.h  LazyPropogationInSegmentTree.h  LongestPrefixMatching.h  MatrixCommonElement.h  OptionalTest.h  QuickSort.h  RandomInRange.h  RangeMinimumQuery.h  ReverseDNSLookUp.h  SMathModule.cppm  ST_Persistency.h  SegmentTree.h  SpanTest.h  SuffixArrayIntroduction.h  TruckLoadBox.h  UkkonenSuffixTree.h  XORLinkListSET1.h  from_roman.cpp  roman.cppm  romanTest.h  to_roman.cpp
DS/FuctionPointerLamda/: FPLamdaTest.h  Finder.cpp  Finder.h  Optimum.h
DS/Movesemantics/: Movesemantics.h  mArray.h
DS/Polymorphism/: pBox.h  pCan.h  pCarton.h  pDimensionError.h  pTestRun.h  pToughPack.h  pVessel.h
